だーくことこ　攻撃書き出し

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -197,13 +197,16 @@
     <ClCompile Include="SourceCode\gamesystem\character\FiveBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\FourthBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Ghost.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\InterAttack.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterEnemy.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\NormalAttack.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\NormalEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Player.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\PlayerAttach.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\SecondBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\SevenBoss.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\ShotAttack.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\SixBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\ThirdBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp" />
@@ -357,13 +360,16 @@
     <ClInclude Include="SourceCode\gamesystem\character\FiveBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\FourthBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Ghost.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\InterAttack.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterEnemy.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\NormalAttack.h" />
     <ClInclude Include="SourceCode\gamesystem\character\NormalEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Player.h" />
     <ClInclude Include="SourceCode\gamesystem\character\PlayerAttach.h" />
     <ClInclude Include="SourceCode\gamesystem\character\SecondBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\SevenBoss.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\ShotAttack.h" />
     <ClInclude Include="SourceCode\gamesystem\character\SixBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\ThirdBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h" />
