--- a/imgui.ini
+++ b/imgui.ini
@@ -69,9 +69,9 @@ Size=70,224
 Collapsed=0
 
 [Window][Hunger]
-Pos=45,104
+Pos=16,462
 Size=311,73
-Collapsed=0
+Collapsed=1
 
 [Window][Ghost]
 Pos=0,3
@@ -241,5 +241,10 @@ Collapsed=0
 [Window][Avatar]
 Pos=81,255
 Size=65,99
+Collapsed=0
+
+[Window][Attack]
+Pos=60,60
+Size=149,99
 Collapsed=0
 
