--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="SourceCode\gamesystem\character\SevenBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\ShotAttack.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\SixBoss.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\SmashShotAttack.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\ThirdBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\Editor.cpp" />
@@ -377,6 +378,7 @@
     <ClInclude Include="SourceCode\gamesystem\character\SevenBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\ShotAttack.h" />
     <ClInclude Include="SourceCode\gamesystem\character\SixBoss.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\SmashShotAttack.h" />
     <ClInclude Include="SourceCode\gamesystem\character\ThirdBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\Editor.h" />
