--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -534,6 +534,7 @@
     <ClCompile Include="SourceCode\gamesystem\character\SmashShotAttack.cpp">
       <Filter>gamesystem\charactor\Boss\Five</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\character\ShadowSlashAttack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\camera\DebugCamera.h">
@@ -1029,6 +1030,7 @@
     <ClInclude Include="SourceCode\gamesystem\character\SmashShotAttack.h">
       <Filter>gamesystem\charactor\Boss\Five</Filter>
     </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\character\ShadowSlashAttack.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Basic.hlsli">
