--- a/imgui.ini
+++ b/imgui.ini
@@ -219,7 +219,7 @@ Size=162,108
 Collapsed=0
 
 [Window][BOSS]
-Pos=60,60
+Pos=75,2
 Size=251,179
 Collapsed=0
 
@@ -246,5 +246,10 @@ Collapsed=0
 [Window][Attack]
 Pos=60,60
 Size=149,99
+Collapsed=0
+
+[Window][LoadObj]
+Pos=3,307
+Size=170,130
 Collapsed=0
 
