新しい火の玉攻撃追加

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="SourceCode\gamesystem\bossattach\ConfuCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\DamageArea.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\DebuffCD.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\FireBoll.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\InterStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\JoyStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\InterCD.cpp" />
@@ -355,6 +356,7 @@
     <ClInclude Include="SourceCode\gamesystem\bossattach\ConfuCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\DamageArea.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\DebuffCD.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\FireBoll.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\JoyStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterCD.h" />
