--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="SourceCode\gamesystem\bossattach\BarrangeCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\ConfuCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\DamageArea.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\DamageBlock.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\DebuffCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\FireBoll.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\InterStamp.cpp" />
@@ -359,6 +360,7 @@
     <ClInclude Include="SourceCode\gamesystem\bossattach\BarrangeCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\ConfuCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\DamageArea.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\DamageBlock.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\DebuffCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\FireBoll.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h" />
