エンドロール作ろうとしたけど画面真っ暗なので分からない

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="SourceCode\gamesystem\actor\BaseActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\ClearSceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\EditorSceneActor.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\actor\EndRollActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\FiveStageActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\FourthStageActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\GameOverSceneActor.cpp" />
@@ -240,6 +241,7 @@
     <ClCompile Include="SourceCode\gamesystem\scene\BaseScene.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\ClearScene.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\EditorScene.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\scene\EndRollScene.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\FirstStage.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\FiveStage.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\FourthStage.cpp" />
@@ -262,6 +264,7 @@
     <ClCompile Include="SourceCode\gamesystem\scene\TitleScene.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\TutorialScene.cpp" />
     <ClCompile Include="SourceCode\gamesystem\stageobj\AttackBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\EndRollObj.cpp" />
     <ClCompile Include="SourceCode\gamesystem\stageobj\Food.cpp" />
     <ClCompile Include="SourceCode\gamesystem\stageobj\GhostBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\stageobj\Heart.cpp" />
@@ -340,6 +343,7 @@
     <ClInclude Include="SourceCode\gamesystem\actor\BaseActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\ClearSceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\EditorSceneActor.h" />
+    <ClInclude Include="SourceCode\gamesystem\actor\EndRollActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\FiveStageActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\FourthStageActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\GameOverSceneActor.h" />
@@ -413,6 +417,7 @@
     <ClInclude Include="SourceCode\gamesystem\scene\BaseScene.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\ClearScene.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\EditorScene.h" />
+    <ClInclude Include="SourceCode\gamesystem\scene\EndRollScene.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\FirstStage.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\FiveStage.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\FourthStage.h" />
@@ -435,6 +440,7 @@
     <ClInclude Include="SourceCode\gamesystem\scene\TitleScene.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\TutorialScene.h" />
     <ClInclude Include="SourceCode\gamesystem\stageobj\AttackBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\EndRollObj.h" />
     <ClInclude Include="SourceCode\gamesystem\stageobj\Food.h" />
     <ClInclude Include="SourceCode\gamesystem\stageobj\GhostBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\stageobj\Heart.h" />
