--- a/imgui.ini
+++ b/imgui.ini
@@ -273,3 +273,13 @@ Pos=60,60
 Size=197,152
 Collapsed=0
 
+[Window][Third]
+Pos=60,60
+Size=51,48
+Collapsed=0
+
+[Window][Six]
+Pos=60,60
+Size=160,144
+Collapsed=0
+
