エンドロールほぼ終わり

--- a/imgui.ini
+++ b/imgui.ini
@@ -164,9 +164,9 @@ Size=254,173
 Collapsed=0
 
 [Window][CD]
-Pos=60,60
+Pos=74,210
 Size=174,168
-Collapsed=0
+Collapsed=1
 
 [Window][DamageArea]
 Pos=41,60
@@ -231,7 +231,7 @@ Collapsed=0
 [Window][Seven]
 Pos=-1,530
 Size=271,234
-Collapsed=0
+Collapsed=1
 
 [Window][Polter]
 Pos=211,165
@@ -279,7 +279,12 @@ Size=173,118
 Collapsed=0
 
 [Window][Six]
-Pos=60,60
+Pos=35,262
 Size=160,144
+Collapsed=1
+
+[Window][Five]
+Pos=60,60
+Size=114,65
 Collapsed=0
 
